@@ -41,10 +41,11 @@ namespace System.CodeDom
 	{
 		private CodeTypeReferenceCollection implementationTypes;
 		private CodeParameterDeclarationExpressionCollection parameters;
-		private CodeTypeReference privateImplementationType;
+		private CodeTypeReference privateImplements;
 		private CodeTypeReference returnType;
 		private CodeStatementCollection statements;
-		private CodeAttributeDeclarationCollection returnTypeCustomAttributes;
+		private CodeAttributeDeclarationCollection returnAttributes;
+		int populated;
 
 #if NET_2_0
 		CodeTypeParameterCollection typeParameters;
@@ -83,10 +84,10 @@ namespace System.CodeDom
 
 		public CodeTypeReference PrivateImplementationType {
 			get {
-				return privateImplementationType;
+				return privateImplements;
 			}
 			set {
-				privateImplementationType = value;
+				privateImplements = value;
 			}
 		}
 
@@ -114,10 +115,10 @@ namespace System.CodeDom
 
 		public CodeAttributeDeclarationCollection ReturnTypeCustomAttributes {
 			get {
-				if ( returnTypeCustomAttributes == null )
-					returnTypeCustomAttributes = new CodeAttributeDeclarationCollection();
+				if ( returnAttributes == null )
+					returnAttributes = new CodeAttributeDeclarationCollection();
 				
-				return returnTypeCustomAttributes;
+				return returnAttributes;
 			}
 		}
 
